wellesleynet/roles/k8s/files/vikunja.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vikunja
  namespace: default
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  serviceName: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
      - name: vikunja-api
        image: vikunja/api:0.20.1
        ports:
        - containerPort: 3456
          protocol: TCP
        volumeMounts:
        - mountPath: /data/
          name: vikunja
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: vikunja-frontend
        image: vikunja/frontend:0.20.2
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: vikunja
        persistentVolumeClaim:
          claimName: vikunja
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: default
  labels:
    app: vikunja
spec:
  ports:
  - port: 80
    name: vikunja
  - port: 3456
    name: vikunja-api
  selector:
    app: vikunja
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 512m
    kubernetes.io/ingress.class: "nginx"
  name: vikunja
  namespace: default
spec:
  rules:
  - host: vikunja.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/dav"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/.well-known"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vikunja
            port:
              number: 80
  - host: llama.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/dav"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/.well-known"
        backend:
          service:
            name: vikunja
            port:
              number: 3456
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vikunja
            port:
              number: 80
  tls:
  - hosts:
    - vikunja.kiski.co
    secretName: vikunja-kiski-co-tls
  - hosts:
    - llama.kiski.co
    secretName: llama-kiski-co-tls
